--- a/src/App.css
+++ b/src/App.css
@@ -64,8 +64,17 @@
 
 
 
-.h-layout1 {
-    height: 60vh;
+.h-100 {
+    height: 30rem;
+}
+.h-101 {
+    height: 80rem;
+}
+.w-100 {
+    width: 45rem;
+}
+.w-101 {
+    width: 88rem;
 }
 
 
