--- a/src/App.css
+++ b/src/App.css
@@ -110,3 +110,27 @@
     --transition-duration: 300ms;
   transition: transform var(--transition-duration) ease-in-out, background-color var(--transition-duration) ease-in-out, color var(--transition-duration) ease-in-out;
 }
+
+
+
+/* styles.css */
+.animated-gradient {
+  /* width:60vw; */
+  /* height: 12vh; */
+   /* Full viewport height */
+  background: linear-gradient(270deg, #ff6ec4, #7873f5, #55efc4, #ff6ec4);
+  background-size: 600% 600%;
+  animation: gradientAnimation 12s ease infinite;
+}
+
+@keyframes gradientAnimation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
